fix header partialy covered on mobile

--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -114,7 +114,7 @@ header {
     text-align: center;
     position: relative;
     overflow: hidden;
-    min-height: 300px; /* Ensure minimum height for header */
+    min-height: 350px; /* Ensure minimum height for header */
     display: flex;
     align-items: center;
     justify-content: center;
